[gd_scene load_steps=50 format=2]

[ext_resource path="res://assets/Textures_v2/Universal/Bars/scrollbar_detail.png" type="Texture" id=1]
[ext_resource path="res://assets/images/iconsitems/quality_bg/blue.png" type="Texture" id=2]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/scrollbar.png" type="Texture" id=3]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/gui/inventory/icon_armor1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/iconsgear/ArmorBasic.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/Mods/button_modsname_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/Textures_v2/Mods/button_modsname_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/Textures_v2/Mods/button_modsname.png" type="Texture" id=9]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=12]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_potion.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_armor_pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_weapon_hover.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_craft_pressed.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_weapon.png" type="Texture" id=17]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_inventory_pressed.png" type="Texture" id=18]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_armor.png" type="Texture" id=19]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_potion_pressed.png" type="Texture" id=20]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_inventory.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_cosm_pressed.png" type="Texture" id=22]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_food_hover.png" type="Texture" id=23]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all_hover.png" type="Texture" id=24]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_cosm_hover.png" type="Texture" id=25]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_potion_hover.png" type="Texture" id=26]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_food_pressed.png" type="Texture" id=27]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_resources_pressed.png" type="Texture" id=28]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_craft_hover.png" type="Texture" id=29]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_armor_hover.png" type="Texture" id=30]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_weapon_pressed.png" type="Texture" id=31]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_resources.png" type="Texture" id=32]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_craft.png" type="Texture" id=33]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_inventory_hover.png" type="Texture" id=34]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_resources_hover.png" type="Texture" id=35]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_food.png" type="Texture" id=36]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all_pressed.png" type="Texture" id=37]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_cosm.png" type="Texture" id=38]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Panels/panel_inventory_items.png" type="Texture" id=39]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/icon_all.png" type="Texture" id=40]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/search.tres" type="StyleBox" id=41]
[ext_resource path="res://gui_modules/Inventory/Scripts/InventoryListModule.gd" type="Script" id=42]
[ext_resource path="res://assets/Fonts_v2/FontThemes/TitlesMiddle.tres" type="DynamicFont" id=43]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 39 )
region_rect = Rect2( 0, 0, 595, 1050 )
margin_left = 68.0
margin_right = 68.0
margin_top = 68.0
margin_bottom = 25.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 12, 48 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 12, 48 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 12, 256 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 12, 48 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 393, 40 )
margin_left = 6.96403
margin_right = 9.0
margin_top = 6.96403
margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 393, 40 )
margin_left = 6.96403
margin_right = 9.0
margin_top = 6.96403
margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 393, 40 )
margin_left = 6.96403
margin_right = 9.0
margin_top = 6.96403
margin_bottom = 8.0

[node name="InventoryListModule" type="Panel"]
light_mask = 0
margin_right = 595.0
margin_bottom = 1050.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 42 )

[node name="Scroller" type="Control" parent="."]
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar" type="VScrollBar" parent="Scroller"]
visible = false
light_mask = 0
margin_left = 19.0
margin_top = 251.0
margin_right = 31.0
margin_bottom = 1021.0
rect_min_size = Vector2( 0, 300 )
custom_styles/grabber_highlight = SubResource( 2 )
custom_styles/grabber = SubResource( 3 )
custom_styles/scroll = SubResource( 4 )
custom_styles/grabber_pressed = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer2" type="ScrollContainer" parent="Scroller"]
light_mask = 0
margin_left = 51.2322
margin_top = 251.0
margin_right = 551.232
margin_bottom = 1033.0
theme = ExtResource( 4 )
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="Scroller/ScrollContainer2"]
light_mask = 0
margin_right = 500.0
size_flags_horizontal = 3
custom_constants/vseparation = 3
custom_constants/hseparation = 3
columns = 7

[node name="Button" type="Button" parent="Scroller/ScrollContainer2/GridContainer"]
visible = false
light_mask = 0
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
toggle_mode = true

[node name="quality_color" type="TextureRect" parent="Scroller/ScrollContainer2/GridContainer/Button"]
visible = false
show_behind_parent = true
margin_left = 1.0
margin_top = 2.0
margin_right = 63.0
margin_bottom = 65.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Image" type="TextureRect" parent="Scroller/ScrollContainer2/GridContainer/Button"]
show_behind_parent = true
light_mask = 0
margin_left = 1.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 65.0
rect_min_size = Vector2( 5, 0 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[node name="Number" type="Label" parent="Scroller/ScrollContainer2/GridContainer/Button"]
light_mask = 0
margin_left = 10.0
margin_top = 31.0
margin_right = 61.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
text = "1"
align = 2
valign = 1
autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="Scroller"]
visible = false
light_mask = 0
margin_left = 51.2322
margin_top = 251.0
margin_right = 551.232
margin_bottom = 1033.0
theme = ExtResource( 4 )
scroll_horizontal_enabled = false

[node name="GridContainer" type="VBoxContainer" parent="Scroller/ScrollContainer"]
light_mask = 0
margin_right = 500.0
size_flags_horizontal = 3

[node name="Button" type="TextureButton" parent="Scroller/ScrollContainer/GridContainer"]
visible = false
light_mask = 0
margin_right = 500.0
margin_bottom = 52.0
rect_min_size = Vector2( 50, 50 )
toggle_mode = true
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 34 )

[node name="quality_color" type="TextureRect" parent="Scroller/ScrollContainer/GridContainer/Button"]
visible = false
show_behind_parent = true
margin_left = 453.0
margin_top = 5.0
margin_right = 495.0
margin_bottom = 47.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Image" type="TextureRect" parent="Scroller/ScrollContainer/GridContainer/Button"]
show_behind_parent = true
light_mask = 0
margin_left = 455.287
margin_top = 5.96381
margin_right = 494.287
margin_bottom = 43.9638
rect_min_size = Vector2( 5, 0 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[node name="Name" type="Label" parent="Scroller/ScrollContainer/GridContainer/Button"]
light_mask = 0
margin_left = 54.0
margin_top = 6.0
margin_right = 381.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
text = "Item Name"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="TextureRect" parent="Scroller/ScrollContainer/GridContainer/Button"]
light_mask = 0
margin_left = 1.0
margin_top = 1.0
margin_right = 48.0
margin_bottom = 49.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Number" type="Label" parent="Scroller/ScrollContainer/GridContainer/Button"]
light_mask = 0
margin_left = 356.0
margin_top = 6.0
margin_right = 428.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
text = "0000"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HiddenContainer" type="ScrollContainer" parent="."]
visible = false
light_mask = 0
margin_left = 81.0
margin_top = 230.0
margin_right = 554.0
margin_bottom = 702.0
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="HiddenContainer"]
columns = 7

[node name="HBoxContainer" type="HBoxContainer" parent="."]
light_mask = 0
margin_left = 48.0
margin_top = 172.0
margin_right = 550.0
margin_bottom = 226.0
custom_constants/separation = 10

[node name="all" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_right = 54.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYALL"
toggle_mode = true
texture_normal = ExtResource( 40 )
texture_pressed = ExtResource( 37 )
texture_hover = ExtResource( 24 )

[node name="food" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 64.0
margin_right = 118.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYMATERIAL"
toggle_mode = true
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 23 )

[node name="usable" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 128.0
margin_right = 182.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYUSE"
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 26 )

[node name="material" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 192.0
margin_right = 246.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYMATERIAL"
toggle_mode = true
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 35 )

[node name="tool" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 256.0
margin_right = 310.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYTOOL"
toggle_mode = true
texture_normal = ExtResource( 33 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 29 )

[node name="weapon" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 320.0
margin_right = 374.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYWEAPON"
toggle_mode = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 31 )
texture_hover = ExtResource( 15 )

[node name="armor" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 384.0
margin_right = 438.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYARMOR"
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 30 )

[node name="costume" type="TextureButton" parent="HBoxContainer"]
light_mask = 0
margin_left = 448.0
margin_right = 502.0
margin_bottom = 54.0
hint_tooltip = "INVENTORYCOSTUME"
toggle_mode = true
texture_normal = ExtResource( 38 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 25 )

[node name="SearchFilter" type="LineEdit" parent="."]
light_mask = 0
margin_left = 23.0
margin_top = 115.61
margin_right = 523.0
margin_bottom = 167.61
custom_colors/selection_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/cursor_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/clear_button_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_selected = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_constants/minimum_spaces = 3
custom_fonts/font = ExtResource( 12 )
custom_styles/normal = ExtResource( 41 )
align = 1
placeholder_text = "INVENTORYFILTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsListTitle" type="Label" parent="."]
light_mask = 0
margin_right = 595.0
margin_bottom = 90.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 43 )
text = "INVENTORYSTASH"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="switchstyle" type="Button" parent="."]
margin_left = 535.746
margin_top = 116.251
margin_right = 580.746
margin_bottom = 165.251
hint_tooltip = "SWITCHINVENTORY"
